# sbd

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: compile-generated-files.yml  container.yml  release-assets.yml  release-plz.yml  rust.yml
ci/docker/: Dockerfile
crates/sbd-gen/: CHANGELOG.md  Cargo.toml
crates/sbd-gen-schema/: CHANGELOG.md  Cargo.toml  README.md
crates/sbd-gen-schema/src/: ariel.rs  common.rs  lib.rs  riot.rs
crates/sbd-gen/sbd-test-files/: ariel-chips.yaml  nrf52840dk.yaml
crates/sbd-gen/src/: ariel.rs  laze.rs  main.rs  pin2tuple.rs  resources.rs  riot.rs
crates/sbd-gen/src/snapshots/: sbd_gen__tests__sbd_ariel.snap
sbd-test-files/: ariel-chips.yaml
src/: ariel.rs  filemap.rs  krate.rs  main.rs  pin2tuple.rs  riot.rs  sbd.rs  utils.rs
src/snapshots/: sbd_gen__tests__sbd_ariel.snap
