[workspace]
resolver = "3"
members = [
  "crates/sbd-gen",
  "crates/sbd-gen-schema",
]

[workspace.package]
edition = "2024"

license = "MIT OR Apache-2.0"
repository = "https://github.com/ariel-os/sbd"
homepage = "https://github.com/ariel-os/sbd"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.101"
argh = "0.1.14"
camino = "1.2.2"
indexmap = { version = "2.13.0", features = ["serde"] }
lazy-regex = "3.5.1"
prettyplease = "0.2.37"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.16.1"
serde_yaml = "0.9.34"
syn = { version = "2.0.116", default-features = false, features = ["full", "parsing"] }
toml = { version = "0.9.12", features = ["preserve_order"] }
walkdir = "2.5.0"
yaml-hash = "0.6.1"

[workspace.lints.clippy]
pedantic = "deny"
