[workspace]
resolver = "3"
members = [
  "crates/sbd-gen",
  "crates/sbd-gen-schema",
]

[workspace.package]
edition = "2024"

license = "MIT OR Apache-2.0"
repository = "https://github.com/ariel-os/sbd"

[workspace.dependencies]
anyhow = "1.0.102"
argh = "0.1.19"
camino = "1.2.2"
indexmap = { version = "2.13.1", features = ["serde"] }
lazy-regex = "3.6.0"
prettyplease = "0.2.37"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.18.0"
serde_yaml = "0.9.34"
syn = { version = "2.0.117", default-features = false, features = ["full", "parsing"] }
toml = { version = "1.1.2", features = ["preserve_order"] }
walkdir = "2.5.0"
yaml-hash = "0.6.2"

[workspace.lints.clippy]
pedantic = "deny"
