[package]
name = "sbd-gen-schema"
version = "0.1.0"
description = "Schema of SBD files"
categories = ["embedded", "hardware-support"]
keywords = ["ariel", "board", "bsp", "riot"]
edition.workspace = true
license.workspace = true
repository.workspace = true
include = ["src/**/*", "LICENSE-*"]

[dependencies]
serde = { workspace = true }
serde_with = { workspace = true }

[lints]
workspace = true
