[package]
name = "sbd-gen-schema"
version = "0.3.0"
description = "Schema of SBD files"
categories = ["embedded", "hardware-support"]
keywords = ["ariel", "board", "bsp", "riot"]
edition.workspace = true
license.workspace = true
repository.workspace = true
include = ["src/**/*", "LICENSE-*"]

[dependencies]
semver = { version = "1.0.28", features = ["serde"] }
serde = { workspace = true }
serde_with = { workspace = true }

[lints]
workspace = true
